--- a/account-service/src/main/resources/bootstrap.yml
+++ b/account-service/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ spring:
     name: account-service
   cloud:
     config:
-      uri: http://localhost:8001
+      uri: http://config-service:8001
       fail-fast: true
-      password: admin
-      username: user
+      password: root
+      username: postgres
 
