--- a/notification-service/src/main/resources/bootstrap.yml
+++ b/notification-service/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ spring:
     name: notification-service
   cloud:
     config:
-      uri: http://localhost:8001
+      uri: http://192.168.100.1:8001
       fail-fast: true
-      password: admin
-      username: user
+      password: root
+      username: postgres
 
