--- a/account-service/src/main/resources/bootstrap.yml
+++ b/account-service/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
     config:
       uri: http://config-service:8001
       fail-fast: true
-      password: root
-      username: postgres
+      password: admin
+      username: user
 
