--- a/deposit-service/src/main/resources/bootstrap.yml
+++ b/deposit-service/src/main/resources/bootstrap.yml
@@ -5,5 +5,5 @@ spring:
     config:
       uri: http://192.168.100.1:8001
       fail-fast: true
-      password: root
-      username: postgres
+      password: admin
+      username: user
