--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ spring:
     name: gateway
   cloud:
     config:
-      uri: http://192.168.100.1:8001
+      uri: http://config-service:8001
       fail-fast: true
-      password: root
-      username: postgres
+      password: admin
+      username: user
 
